src/test/scala/wacc/wacc_examples/invalid/semanticErr/expressions/charIntOpTypeErr.wacc
begin
    int x = 9 ;
    char y = 'b' ;
    println x > y
end